--- a/GPS Copilot Client/Pages/Index.razor
+++ b/GPS Copilot Client/Pages/Index.razor
@@ -1,9 +1,33 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Partner Business Plan</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+        <header class="header">
+            <div class="header-inner-container">
+                @* <div class="header-icon" style="display: inline-block"></div> *@
+                <div class="header-text" style="display: inline-block">GPS Copilot2</div>
+            </div>
+        </header>
+        <div class="row">
+            <div class="column main-content-area">
+                <div class="content-title">PBP AI assistant</div>
+                <div class="main-text">
+                    The purpose of our project is to depict the way, in which we, the global GPS tech community, can develop AI-infused copilot experiences that would increase role execution excellence and our grow our partners’ business and their customers’ success.​
+                </div>
+        <div class="main-text">
+                                     <p></p>
+                </div>
+                 <div class="main-text">
+                    For the GPS organization to thrive in this Era of AI, we need not only to prepare our partner ecosystem for these new AI-infused solution plays, but we also need to make sure GPS internal teams are leveraging AI solutions to augment our own productivity.
+                </div>
+                                 <div class="main-text">
+                                     <p></p>
+                </div>
+                 <div class="main-text">
+                        <img src="./images/hackathon.png" style="width:500px" />
+                </div>
+            </div>
+            <div class="column main-content-area" id="bot">
+                <iframe src='https://webchat.botframework.com/embed/gpscopilotsvc?s=cjMNU0uf91M.XDfKWNMjxD_98fwPjrn1pczMS_SEbiGJEqvj2k-jBtE' style='min-width: 400px; width: 100%; min-height: 600px;'></iframe>
+            </div>
+        </div>
