--- a/GPS Copilot Client/Pages/_Layout.cshtml
+++ b/GPS Copilot Client/Pages/_Layout.cshtml
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="Bot-GPSCopilot-PartnerPlan-Identity.styles.css" rel="stylesheet" />
+    <link href="GPS Copilot Client.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
