--- a/GPS Copilot Client/Shared/NavMenu.razor
+++ b/GPS Copilot Client/Shared/NavMenu.razor
@@ -10,8 +10,8 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="Index2">
+                <span class="oi oi-home" aria-hidden="false"></span> Partner Business Plan
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -28,7 +28,7 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+    private bool collapseNavMenu = false;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
